Changed version - fixed the constructor (string one) and did addition and multiplication.